# gameproject-cpp-cmake-conan-entt-bgfx-imgui

./: .gitignore  CMakeLists.txt  README.Rmd  README.md  build.sh  conanfile.txt
notebooks/: greek-cheat-sheet.qmd  notebook.qmd  stats-notes-template.qmd
samples/: nuke-renv.R
src/: main.cpp
src/engine/Controller/: asset_loader.cpp  input.cpp
src/engine/Model/: Position.h  Velocity.h  movement_system.cpp
src/engine/View/: bgfx_renderer.cpp  imgui_layer.cpp
toolchains/: android.toolchain.cmake  ios.toolchain.cmake
